--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,9 @@
   
   .square {
     background: #fff;
-    border: 1px solid #999;
+    border: 0px solid black;
     float: left;
-    font-size: 80px;
+    font-size: 70px;
     font-weight: bold;
     line-height: 34px;
     margin-right: -1px;
@@ -47,7 +47,8 @@
   }
 
   .square-winner{
-    background-color: blue;
+    background-color: #0069D9;
+    color: white;
   }
   
   .square:focus {
@@ -62,7 +63,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     margin-top: 10%;
   }
 
@@ -109,7 +110,7 @@
 
   .row1{
     border-bottom-style: solid;
-    border-width: 0px 8px 0px 8px;
+    border-width: 0px 6px 0px 6px;
   }
 
   .row2{
@@ -119,10 +120,23 @@
 
   .row3{
     border-bottom-style: solid black;
-    border-width: 8px;
+    border-width: 6px;
   }
 
   .btn{
     width: 100%;
     margin-top: 5px;
+  }
+
+  .status{
+    font-size: 30px;
+    margin-top: 30px;
+  }
+
+  li{
+    list-style-type: none;
+  }
+
+  ul{
+    padding-right: 0px;
   }
